# rustserver

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
definition/: api.yaml
definition/endpoints/: users.yaml
definition/endpoints/models/: create_user_request.yaml  create_user_response.yaml  task.yaml  user.yaml
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/api/: openapi.yaml
openapi/docs/: CreateUserRequest.md  Task.md  User.md  user_api.md
openapi/examples/client/: main.rs
openapi/examples/server/: main.rs  server.rs
openapi/src/: context.rs  lib.rs  models.rs
openapi/src/client/: mod.rs
openapi/src/server/: mod.rs
src/: api.rs  context.rs  handlers.rs  handlers_test.rs  lib.rs  logger.rs  main.rs  middleware.rs  persistance.rs  persistance_test.rs  router.rs  service.rs  service_test.rs  test.rs  worker.rs  worker_test.rs
src/handlers/: create_user.rs  get_user.rs  handlers.rs  handlers_test.rs  mod.rs  socket.rs
src/models/: items.rs  list.rs  list_tests.rs  mod.rs  user.rs  user_tests.rs
src/models/migrations/: 20211122175957_create_tables.sql
