[package]
name = "rustserver"
version = "0.1.0"
authors = ["andrefsp <andrefsp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "mysql"] }
sqlx-cli = { version = "0.5.10" }
tokio = { version = "1.14.0", features = ["full"] }
hyper = { version = "0.14.16" , features = ["full"] }
async-trait = { version = "0.1.51" }
uuid = { version = "0.8", features = ["serde", "v4"] }
mockall = { version = "0.10.2" }
http = { version = "0.2.5" }
futures = { version = "0.3.19" }
tower = { version =  "0.4.11", features = ["full"] }
routerify = { version = "3.0.0" }
